Change layout of gameboard to fix overflow scrolling issue

--- a/src/pages/Singleplayer/Singleplayer.scss
+++ b/src/pages/Singleplayer/Singleplayer.scss
@@ -93,15 +93,15 @@
     }
 
     &__game-container {
-        margin: 0 $margin-mobile;
+        margin: 0 5rem;
         width: 100%;
         height: 25rem;
-        overflow: auto;
         padding: 1rem;
         border: 2px black solid;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        overflow: scroll;
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;
         background-image: url('../../assets/game-background.png');
         background-color: rgba(255, 255, 255, 0.4);
         background-position: center;
